--- a/Official HotMug App®/Base.lproj/Main.storyboard
+++ b/Official HotMug App®/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="8YX-ce-x5E">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="8YX-ce-x5E">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -34,7 +34,7 @@
                                 </connections>
                             </button>
                             <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" sectionIndexMinimumDisplayRowCount="9" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="UrC-vB-f1C">
-                                <rect key="frame" x="0.0" y="104" width="320" height="463"/>
+                                <rect key="frame" x="0.0" y="105" width="320" height="463"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -89,8 +89,8 @@
                         </subviews>
                         <color key="backgroundColor" red="0.63137257099999999" green="0.1176470667" blue="0.090196080509999998" alpha="1" colorSpace="deviceRGB"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Nearby" image="justMug6.png" id="u1e-5L-l1D">
-                        <inset key="imageInsets" minX="50" minY="50" maxX="50" maxY="50"/>
+                    <tabBarItem key="tabBarItem" title="Nearby" image="location.png" id="u1e-5L-l1D">
+                        <inset key="imageInsets" minX="80" minY="50" maxX="80" maxY="50"/>
                     </tabBarItem>
                     <connections>
                         <outlet property="FindNeabyButton" destination="5GE-hm-Sbk" id="7jL-eF-6eQ"/>
@@ -215,7 +215,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="justMug6.png" width="150" height="149"/>
+        <image name="location.png" width="200" height="133"/>
     </resources>
     <color key="tintColor" red="0.63137257099999999" green="0.1176470667" blue="0.090196080509999998" alpha="1" colorSpace="deviceRGB"/>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
